re PR lto/88297 (Assembler Error: symbol `_Z41__static_initialization_and_destruction_0ii.constprop.0' is already defined)

PR ipa/88297
	* ipa-cp.c (create_specialized_node): Track clone counters by
	node assembler names.
	(ipcp_driver): Change type of clone_num_suffixes key to const
	char*.

From-SVN: r266780